# personal-site

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  commitmsg.txt  next.config.ts  package-lock.json  package.json  trigger-build.md
.github/.agents/: implementer.agent.md
.github/agents/: documentor.agent.md  git-ops.agent.md  implementer.agent.md  orchestrator.agent.md
.github/agents/skills/documentation/: SKILL.md
.github/instructions/: generic.instructions.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
app/: globals.css  layout.tsx  page.tsx
app/blog/: page.tsx
app/components/: AnimatedArtwork.tsx  currently-panel.tsx  globe-3d.tsx  hero-panel.tsx  live-clock.tsx  mobile-nav.tsx  now-playing-panel.tsx  site-primitives.tsx  status-bar.tsx  synthwave-hero-image.tsx  terminal-panel.tsx  travel-panel.tsx
backend/: .dockerignore  CMakeLists.txt  Dockerfile  SETUP.md
backend/src/: NowPlayingController.cpp  NowPlayingController.h  SpotifyAuth.cpp  SpotifyAuth.h  main.cpp
content/: about.md  contact.md  currently.md  featured-work.md  hero.md  now-playing.md  travel.md
docs/: accessibility-baseline.md  architecture.md  ci-cd-pipeline.md  hosting-commands.md  hosting-config.md  hosting-hld.md  hosting-roadmap.md  hosting-setup.md  implementation-phases.md  registry.md  style-constritution.md  style-guide.md  travel-globe-plan.md
docs/adrs/: ADR-001-cpp-cloud-run-backend.md
docs/diagrams/: hosting-architecture.drawio
docs/templates/: adr-template.md  issue-template.md
lib/: content.ts  markers.ts
lib/terminal/: registry.ts
scripts/: README.md  branch-name.sh  upload-issues.sh
